Fixed issue with overflowing project modal text in mobile

--- a/src/Components/AppBody/Components/Projects/Components/ProjectModal/ProjectModal.module.scss
+++ b/src/Components/AppBody/Components/Projects/Components/ProjectModal/ProjectModal.module.scss
@@ -117,3 +117,14 @@
   -webkit-columns: 2;
   -moz-columns: 2;
 }
+
+@media screen and (max-width: $mobile_screen_width) {
+  .description {
+    max-height: unset;
+  }
+
+  .modalContent {
+    max-height: 55vh;
+    overflow-y: auto;
+  }
+}
